feat: is this the first commit?

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-end-rgb: 152, 0, 0;
   }
 }
 
@@ -24,4 +24,26 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+@layer base {
+  :root {
+    --primary-color: 96.32% 3.26 48.73;
+    --accent-color: 88.52% 8.51 142.57;
+    --accent-color-2: 86.13% 20.66 18.54;
+    --text-color-1: 5% 0 0;
+    --text-color-2: 5% 0 0;
+    --background-color-1: 95% 0 0;
+    --background-color-2: 95% 0 0;
+  }
+}
+
+@layer components {
+  .grid-cell {
+    @apply rounded-3xl bg-primary/80 transition-all duration-500;
+  }
+
+  .selected-grid-cell {
+    @apply transition-none duration-0;
+  }
 }
