--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,48 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 152, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 @layer base {
   :root {
-    --primary-color: 96.32% 3.26 48.73;
-    --accent-color: 88.52% 8.51 142.57;
-    --accent-color-2: 86.13% 20.66 18.54;
-    --text-color-1: 5% 0 0;
-    --text-color-2: 5% 0 0;
-    --background-color-1: 95% 0 0;
-    --background-color-2: 95% 0 0;
-  }
-}
-
-@layer components {
-  .grid-cell {
-    @apply rounded-3xl bg-primary/80 transition-all duration-500;
+    --primary-color: 89.83% 0.024 145.37;
+    --accent-color: 88.6% 0.06 15.82;
+    --accent-color-2: 85.35% 0.065 308.58;
+    --text-color: 5% 0 0;
+    --header-color: 5% 0 0;
+    --background-color: 96.87% 0.009 44.89;
+    --content-bg-color: 100% 0 0;
   }
 
-  .selected-grid-cell {
-    @apply transition-none duration-0;
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --primary-color: 32.27% 0.044 321.59;
+      --accent-color: 46.74% 0.072 293.6;
+      --accent-color-2: 61.63% 0.074 263.42;
+      --background-color: 15.29% 0.01 255.44;
+      --content-bg-color: 17.63% 0.014 258.36;
+      --border-color: 33% 0.015 252.31;
+    }
+  }
+
+  :root[data-theme="dark"] {
+    --primary-color: 32.27% 0.044 321.59;
+    --accent-color: 46.74% 0.072 293.6;
+    --accent-color-2: 61.63% 0.074 263.42;
+    --background-color: 15.29% 0.01 255.44;
+    --content-bg-color: 17.63% 0.014 258.36;
   }
 }
