feat: add theme toggle

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 @layer base {
+  html,
+  body {
+    @apply bg-background;
+  }
+
   :root {
     --primary-color: 89.83% 0.024 145.37;
     --accent-color: 88.6% 0.06 15.82;
@@ -11,6 +16,18 @@
     --header-color: 5% 0 0;
     --background-color: 96.87% 0.009 44.89;
     --content-bg-color: 100% 0 0;
+  }
+
+  @media (prefers-color-scheme: light) {
+    :root {
+      --primary-color: 89.83% 0.024 145.37;
+      --accent-color: 88.6% 0.06 15.82;
+      --accent-color-2: 85.35% 0.065 308.58;
+      --text-color: 5% 0 0;
+      --header-color: 5% 0 0;
+      --background-color: 96.87% 0.009 44.89;
+      --content-bg-color: 100% 0 0;
+    }
   }
 
   @media (prefers-color-scheme: dark) {
@@ -22,6 +39,17 @@
       --content-bg-color: 17.63% 0.014 258.36;
       --border-color: 33% 0.015 252.31;
     }
+  }
+
+  :root[data-theme="light"] {
+    --primary-color: 89.83% 0.024 145.37;
+    --accent-color: 88.6% 0.06 15.82;
+    --accent-color-2: 85.35% 0.065 308.58;
+    --text-color: 5% 0 0;
+    --header-color: 5% 0 0;
+    --background-color: 96.87% 0.009 44.89;
+    --content-bg-color: 100% 0 0;
+    --border-color: 100% 0 0;
   }
 
   :root[data-theme="dark"] {
