--- a/src/components/theme-cell/theme-grid-cell.css
+++ b/src/components/theme-cell/theme-grid-cell.css
@@ -2,7 +2,7 @@
 
 @layer components {
   .theme-button {
-    @apply mx-2 flex h-10 w-10 items-center justify-center rounded-full border border-transparent;
+    @apply flex h-14 w-14 items-center justify-center rounded-full border border-transparent;
     transition: transform 0.3s ease-in-out;
   }
 
