--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,4 +59,22 @@
     --background-color: 15.29% 0.01 255.44;
     --content-bg-color: 17.63% 0.014 258.36;
   }
+
+  :root[data-theme="retro"] {
+    --primary-color: 62.64% 0.103 184.85;
+    --accent-color: 74.15% 0.157 64.73;
+    --accent-color-2: 59.11% 0.192 29.3;
+    --background-color: 96.87% 0.009 44.89;
+    --content-bg-color: 80.47% 0.157 88.1;
+    --border-color: 84% 0.015 252.31;
+  }
+
+  :root[data-theme="neon"] {
+    --primary-color: 83.04% 0.146 74.35;
+    --accent-color: 70.35% 0.186 352.22;
+    --accent-color-2: 79.34% 0.128 203.85;
+    --background-color: 15.29% 0.01 255.44;
+    --content-bg-color: 17.63% 0.014 258.36;
+    --border-color: 60.31% 0.186 310.89;
+  }
 }
