--- a/src/components/theme-cell/theme-grid-cell.css
+++ b/src/components/theme-cell/theme-grid-cell.css
@@ -2,31 +2,52 @@
 
 @layer components {
   .theme-button {
-    @apply flex h-14 w-14 items-center justify-center rounded-full border border-transparent;
+    @apply flex h-12 w-12 items-center justify-center rounded-xl opacity-50;
     transition: transform 0.3s ease-in-out;
   }
 
   .theme-button:hover {
-    @apply animate-pulse;
+    @apply animate-pulse border-4 border-border;
   }
 
-  .theme-button:active {
-    transform: scale(0.9);
-    animation: spinAndGrow 2s 0.25s linear infinite;
+  .theme-button.active-theme {
+    @apply h-14 w-14 opacity-100;
   }
 }
 
-@keyframes spinAndGrow {
-  0% {
-    transform: rotate(0deg) scale(0.9);
-  }
-  40% {
-    transform: rotate(180deg) scale(0.7);
-  }
-  80% {
-    transform: rotate(360deg) scale(1.2);
-  }
-  100% {
-    transform: rotation(360deg) scale(1.1);
-  }
+.neon-color-wheel {
+  background: conic-gradient(
+    oklch(83.04% 0.146 74.35),
+    oklch(70.35% 0.186 352.22),
+    oklch(79.34% 0.128 203.85),
+    oklch(83.04% 0.146 74.35)
+  );
+}
+
+.retro-color-wheel {
+  background: conic-gradient(
+    oklch(62.64% 0.103 184.85),
+    oklch(74.15% 0.157 64.73),
+    oklch(59.11% 0.192 29.3),
+    oklch(80.47% 0.157 88.1),
+    oklch(62.64% 0.103 184.85)
+  );
+}
+
+.dark-color-wheel {
+  background: conic-gradient(
+    oklch(32.27% 0.044 321.59),
+    oklch(46.74% 0.072 293.6),
+    oklch(61.63% 0.074 263.42),
+    oklch(33% 0.015 252.31)
+  );
+}
+
+.light-color-wheel {
+  background: conic-gradient(
+    oklch(89.83% 0.024 145.37),
+    oklch(88.6% 0.06 15.82),
+    oklch(85.135% 0.065 308.58),
+    oklch(89.83% 0.024 145.37)
+  );
 }
