--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,8 @@
     --text-color: 5% 0 0;
     --background-color: 96.87% 0.009 44.89;
     --content-bg-color: 100% 0 0;
+    --border-color: 33% 0.015 252.31;
+    --invert-border-color: 5% 0 0;
   }
 
   @media (prefers-color-scheme: light) {
@@ -40,6 +42,7 @@
       --text-color: 5% 0 0;
       --background-color: 96.87% 0.009 44.89;
       --content-bg-color: 100% 0 0;
+      --button-border-color: 5% 0 0;
     }
   }
 
