--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,9 +28,12 @@
     --accent-color: 89.83% 0.024 145.37;
     --accent-color-2: 88.6% 0.06 15.82;
     --text-color: 5% 0 0;
+    --subtext-color: 55% 0 0;
     --background-color: 96.87% 0.009 44.89;
     --content-bg-color: 100% 0 0;
-    --border-color: 33% 0.015 252.31;
+    --border-color: 100% 0 0;
+    --button-border-color: 80% 0 0;
+    --button-ring-color: 70% 0 0;
     --invert-border-color: 5% 0 0;
   }
 
@@ -40,9 +43,12 @@
       --accent-color: 89.83% 0.024 145.37;
       --accent-color-2: 88.6% 0.06 15.82;
       --text-color: 5% 0 0;
+      --subtext-color: 55% 0 0;
       --background-color: 96.87% 0.009 44.89;
       --content-bg-color: 100% 0 0;
-      --border-color: 33% 0.015 252.31;
+      --border-color: 100% 0 0 0;
+      --button-border-color: 80% 0 0;
+      --button-ring-color: 70% 0 0;
       --invert-border-color: 5% 0 0;
     }
   }
@@ -56,6 +62,9 @@
       --content-bg-color: 17.63% 0.014 258.36;
       --border-color: 33% 0.015 252.31;
       --text-color: 100% 0 0;
+      --button-border-color: 30% 0 0;
+      --button-ring-color: 70% 0 0;
+      --subtext-color: 55% 0 0;
     }
   }
 
@@ -66,16 +75,10 @@
     --background-color: 96.87% 0.009 44.89;
     --content-bg-color: 100% 0 0;
     --border-color: 100% 0 0;
+    --button-border-color: 80% 0 0;
+    --button-ring-color: 70% 0 0;
     --text-color: 5% 0 0;
-  }
-
-  :root[data-theme="dark"] {
-    --primary-color: 32.27% 0.044 321.59;
-    --accent-color: 46.74% 0.072 293.6;
-    --accent-color-2: 61.63% 0.074 263.42;
-    --background-color: 15.29% 0.01 255.44;
-    --content-bg-color: 17.63% 0.014 258.36;
-    --border-color: 33% 0.015 252.31;
+    --subtext-color: 55% 0 0;
   }
 
   :root[data-theme="retro"] {
@@ -86,6 +89,20 @@
     --content-bg-color: 100% 0 0;
     --border-color: 100% 0 0;
     --text-color: 5% 0 0;
+    --subtext-color: 55% 0 0;
+    --button-border-color: 80% 0 0;
+    --button-ring-color: 70% 0 0;
+  }
+
+  :root[data-theme="dark"] {
+    --primary-color: 32.27% 0.044 321.59;
+    --accent-color: 46.74% 0.072 293.6;
+    --accent-color-2: 61.63% 0.074 263.42;
+    --background-color: 15.29% 0.01 255.44;
+    --content-bg-color: 17.63% 0.014 258.36;
+    --border-color: 33% 0.015 252.31;
+    --button-border-color: 30% 0 0;
+    --button-ring-color: 70% 0 0;
   }
 
   :root[data-theme="neon"] {
@@ -95,5 +112,7 @@
     --background-color: 15.29% 0.01 255.44;
     --content-bg-color: 17.63% 0.014 258.36;
     --border-color: 33% 0.015 252.31;
+    --button-border-color: 30% 0 0;
+    --button-ring-color: 70% 0 0;
   }
 }
