--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
   }
 
   p {
-    @apply text-base text-text;
+    @apply text-base leading-relaxed text-text;
     font-family: var(--font-noto-sans);
   }
 
